[gd_scene load_steps=6 format=3 uid="uid://w4c4lv7rl2g0"]

[ext_resource type="Script" uid="uid://baj03m41s7a54" path="res://addons/Ds_levels/ui/level_manager_ui.gd" id="1_wi4mp"]
[ext_resource type="PackedScene" uid="uid://b55qa16iq6a8v" path="res://addons/Ds_levels/ui/level_data_list.tscn" id="2_6ekk6"]
[ext_resource type="PackedScene" uid="uid://owscnbdnmsbp" path="res://addons/Ds_levels/ui/level_data_inspector.tscn" id="3_lvokq"]
[ext_resource type="Script" uid="uid://yp6phy77s6qo" path="res://addons/Ds_levels/ui/loading_screen_edit.gd" id="4_hvygi"]
[ext_resource type="PackedScene" uid="uid://86wp7jhk0f6u" path="res://addons/Ds_levels/ui/loading_screens_table.tscn" id="5_i4682"]

[node name="level_manager_ui" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_wi4mp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="level_list" type="Panel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 31)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"panel"

[node name="TabBar" type="TabBar" parent="VBoxContainer/level_list"]
layout_mode = 2
offset_right = 1144.0
offset_bottom = 31.0
current_tab = 0
tab_count = 2
tab_0/title = "Levels"
tab_1/title = "Loading_screens"

[node name="level_edit" type="HSplitContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="level_data_list" parent="VBoxContainer/level_edit" instance=ExtResource("2_6ekk6")]
layout_mode = 2

[node name="level_data_inspector" parent="VBoxContainer/level_edit" instance=ExtResource("3_lvokq")]
unique_name_in_owner = true
layout_mode = 2

[node name="loading_screen_edit" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("4_hvygi")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/loading_screen_edit"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/loading_screen_edit/HBoxContainer"]
layout_mode = 2
text = "Add"

[node name="Button2" type="Button" parent="VBoxContainer/loading_screen_edit/HBoxContainer"]
layout_mode = 2
text = "Select Storage Path"

[node name="Panel" type="Panel" parent="VBoxContainer/loading_screen_edit"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/loading_screen_edit/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="loading_screens_table" parent="VBoxContainer/loading_screen_edit/Panel/MarginContainer" instance=ExtResource("5_i4682")]
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="tab_changed" from="VBoxContainer/level_list/TabBar" to="." method="_on_tab_bar_tab_changed"]
[connection signal="edit_pressed" from="VBoxContainer/level_edit/level_data_list" to="." method="_on_level_data_list_edit_pressed"]
